# Institution-automation-n-control

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: architecture.md  generate_architecture_diagram.py
include/: mainwindow.h
include/modules/: attendancemanagement.h  feesfinancemanagement.h  inventorymanagement.h  studentmanagement.h  teachermanagement.h
src/: mainwindow.cpp
src/modules/: attendancemanagement.cpp  feesfinancemanagement.cpp  inventorymanagement.cpp  studentmanagement.cpp  teachermanagement.cpp
